--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Horse Race</title>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="area">
       <div class="win-container">
         <h1></h1>
       </div>
-      <img id="Vugar" src="/Horses/at1.gif" alt="Vugar" />
-      <img id="Murad" src="/Horses/at2.gif" alt="Murad" />
-      <img id="Nijat" src="/Horses/at3.gif" alt="Nijat" />
-      <img id="Alisahib" src="/Horses/at4.gif" alt="Alisahib" />
-      <img id="Elchin" src="/Horses/at5.gif" alt="Elchin" />
-      <img id="Ali" src="/Horses/at6.gif" alt="Ali" />
+      <img id="Vugar" src="Horses/at1.gif" alt="Vugar" />
+      <img id="Murad" src="Horses/at2.gif" alt="Murad" />
+      <img id="Nijat" src="Horses/at3.gif" alt="Nijat" />
+      <img id="Alisahib" src="Horses/at4.gif" alt="Alisahib" />
+      <img id="Elchin" src="Horses/at5.gif" alt="Elchin" />
+      <img id="Ali" src="Horses/at6.gif" alt="Ali" />
       <h1 class="finish">Finish</h1>
       <div id="finish-line"></div>
     </div>
@@ -25,6 +25,6 @@
       <button id="btn">Start</button>
     </div>
 
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
